fix: Feito ajustes nas classes de testes ReminderControllerTest e na ReminderServiceTest.